<resources>
    <string name="app_name">Warframe Companion</string>
    <string name="view">View</string>
    <string name="close">Close</string>
    <string name="show_all">Show all</string>
    <string name="show_more">Show more</string>
    <string name="in_game">In game</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <!-- Strings related to DashboardNewsWidgetView -->
    <string name="view_dashboard_news_widget_txt_show_all">Show all news</string>

    <!-- Strings related to DashboardFissuresWidgetView -->
    <string name="view_dashboard_fissures_widget_txt_title">Void fissures</string>
    <string name="view_dashboard_fissures_widget_txt_lith">Lith: %d</string>
    <string name="view_dashboard_fissures_widget_txt_meso">Meso: %d</string>
    <string name="view_dashboard_fissures_widget_txt_neo">Neo: %d</string>
    <string name="view_dashboard_fissures_widget_txt_axi">Axi: %d</string>
    <string name="view_dashboard_fissures_widget_txt_show_all">Show all fissures</string>

    <!-- Strings related to DashboardInvasionsWidgetView -->
    <string name="view_dashboard_invasions_widget_txt_title">Invasion rewards</string>
    <string name="view_dashboard_invasions_widget_txt_show_all">Show all invasions</string>

    <!-- Strings related to DashboardSortieWidgetView -->
    <string name="view_dashboard_sortie_widget_txt_title">Sortie</string>
    <string name="view_dashboard_sortie_widget_txt_details">Show details</string>

    <!-- Strings related to ContainerView -->
    <string name="view_container_title">Warframe Companion</string>
    <string name="view_container_nav_item_dashboard">Dashboard</string>
    <string name="view_container_nav_item_market">Market</string>
    <string name="view_container_nav_item_codex">Codex</string>
    <string name="view_container_nav_item_relics">Relics</string>

    <!-- Strings related to HomeView -->
    <string name="view_home_tab_news">News</string>
    <string name="view_home_tab_fissures">Fissures</string>
    <string name="view_home_tab_sortie">Sortie</string>

    <!-- Strings related to NewsView -->
    <string name="view_news_title">News</string>
    <string name="view_news_txt_failure">Failed to load news.</string>
    <string name="view_news_dialog_view_post_content">Do you want to view the forum post?</string>
    <string name="view_news_btn_reload">Reload</string>

    <!-- Strings related to InvasionsView -->
    <string name="view_invasions_title">Invasions</string>
    <string name="view_invasions_txt_failure">Failed to load invasions.</string>
    <string name="view_invasions_btn_reload">Reload</string>

    <!-- Strings related to FissuresView -->
    <string name="view_fissures_title">Fissures</string>
    <string name="view_fissures_adapter_txt_time_expired">Expired!</string>
    <string name="view_fissures_txt_failure">Failed to load fissures.</string>
    <string name="view_fissures_btn_reload">Reload</string>

    <!-- Strings related to SortieView -->
    <string name="view_sortie_title">Sortie</string>
    <string name="view_sortie_txt_time_expired">Sortie expired!</string>
    <string name="view_sortie_txt_missions_header">Missions</string>
    <string name="view_sortie_txt_failure">Failed to load sortie.</string>
    <string name="view_sortie_btn_reload">Reload</string>

    <!-- Strings related to MarketDashboardView -->
    <string name="view_market_dashboard_title">Warframe.market - PC</string>
    <string name="view_market_dashboard_txt_search_hint">Search for item</string>

    <!-- Strings related to MarketItemView -->
    <string name="view_market_item_tab_details">Details</string>
    <string name="view_market_item_tab_sales">Sales</string>
    <string name="view_market_item_tab_buys">Buys</string>
    <string name="view_market_item_menu_favorite">Remove from favorites</string>
    <string name="view_market_item_menu_not_favorite">Add to favorites</string>
    <string name="view_market_item_toast_added_to_favorites">Added item to favorites</string>
    <string name="view_market_item_toast_removed_from_favorites">Removed item from favorites</string>

    <!-- Strings related to MarketItemSalesView -->
    <string name="view_market_item_sales_txt_no_sales">No orders found</string>

    <!-- Strings related to MarketItemBuysView -->
    <string name="view_market_item_sales_txt_no_buys">No orders found</string>
    <string name="view_market_item_sales_txt_error">Failed to load orders</string>

</resources>
